# Trial_RAG

./: README.md  cmd.txt  pyproject.toml
data/: Bank_Transaction_Fraud_Detection_100rows.csv  bm25_values.json
src/: p1_config.py  p2_document_processor.py  p2_document_processor2.py  p3_embeddings.py  p4_retrieval_service.py  p5_agent_service.py  p6_evaluation.py  p6_evaluation2.py  run_indexing.py  run_retrieval.py
src2/: main.py  p1_config.py  p7_video_processor.py  p8_image_processor.py  p9_audio_processor.py
