[project]
name = "a2a-mcp-app"
version = "0.1.0"
description = "A2A + MCP implementation with FastAPI and Streamlit UI"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "python-a2a[inspector]>=0.3.0",   

    # ---- A2A Core ----
    "python-a2a>=0.3.0",

    # ---- FastAPI / HTTP ----
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "httpx>=0.28.0",
    "uvicorn>=0.31.0",

    # ---- UI ----
    "streamlit>=1.38.0",
    

    # ---- MCP Integration ----
    "fastmcp>=1.0.0",
    # "mcp[cli]>=1.5.0",  # uncomment if needed
    "langchain-mcp-adapters>=0.0.9",

    # ---- LangChain Stack ----
    "langchain>=0.3.0",
    "langgraph>=0.4.1",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.9",
    "langchain-ollama>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-experimental==0.3.4",


    # ---- Finance Tooling ----
    "yfinance>=0.2.36",
    
    # ---- Code Quality / Dev Tools ----
    "black>=24.10.0",
    "pylint>=3.2.0",
    "isort>=5.13.2",

    "pinecone==7.3.0",
    "pinecone-text==0.11.0",
    "pypdf==6.4.0",
    "opencv-python==4.12.0.88",
    "moviepy==2.2.1",
    "ragas>=0.3.0",

    ]


[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

